@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-26T08:08:59Z",
+  "timestamp" : "2022-10-26T16:08:03Z",
   "count_outdated" : 649,
   "uniques_outdated" : 135,
-  "count" : 656,
-  "uniques" : 140,
+  "count" : 658,
+  "uniques" : 141,
   "views" : [
     {
       "timestamp": "2022-10-14T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-10-26T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
