@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 5,
+  "count": 9,
+  "uniques": 6,
   "views": [
     {
       "timestamp": "2022-10-14T00:00:00Z",
@@ -21,6 +21,11 @@
       "timestamp": "2022-10-25T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-10-26T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
